[gd_scene load_steps=9 format=2]

[ext_resource path="res://button.png" type="Texture" id=1]
[ext_resource path="res://dialogue.gd" type="Script" id=2]
[ext_resource path="res://Buttons/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Buttons/recall.png" type="Texture" id=4]
[ext_resource path="res://Buttons/back.png" type="Texture" id=5]
[ext_resource path="res://click.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="dialogue" type="Sprite"]
position = Vector2( 498.835, 466.67 )
scale = Vector2( 3.49477, 3.48289 )
script = ExtResource( 2 )

[node name="button" type="Sprite" parent="."]
position = Vector2( -6.44635, -22.1539 )
scale = Vector2( 1.21501, 0.8 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -77.0
margin_top = -12.0
margin_right = 184.0
margin_bottom = 28.0
rect_scale = Vector2( 0.6, 0.6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -42.9001, 18.5015 )
scale = Vector2( 1.29399, 0.520777 )

[node name="Area2D" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( 0.375275, 1.34052 )
scale = Vector2( 0.2, 0.4 )

[node name="recall" type="Sprite" parent="Sprite"]
position = Vector2( 0.680695, -14.6341 )
scale = Vector2( 0.237978, 0.571148 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite"]
visible = false
margin_left = -17.0
margin_top = -10.0
margin_right = 53.0
margin_bottom = 8.0
rect_scale = Vector2( 0.5, 1.2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "remember"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 42.3701, 18.5015 )
scale = Vector2( 1.29399, 0.520777 )

[node name="Area2D" parent="Sprite2" instance=ExtResource( 3 )]
position = Vector2( 0.375275, 1.34052 )
scale = Vector2( 0.2, 0.4 )

[node name="back" type="Sprite" parent="Sprite2"]
position = Vector2( -0.867249, -14.6341 )
scale = Vector2( 0.237978, 0.571148 )
texture = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite2"]
visible = false
margin_left = -17.0
margin_top = -10.0
margin_right = 53.0
margin_bottom = 8.0
rect_scale = Vector2( 0.5, 1.2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="next" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -16.0
[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="Sprite2/Area2D" to="." method="_on_back_input_event"]
